Style changes: Fixed sendMessageForm box-shadow issue, added z-indexes, and added roomList color to a gradient

--- a/src/App.css
+++ b/src/App.css
@@ -68,6 +68,7 @@
   grid-area: n;
   height: 100%;
   padding: 0;
+  z-index: 200;
 }
 
 .createRoomForm form {
@@ -94,6 +95,7 @@
 .sendMessageForm {
   grid-area: f;
   padding: 0;
+  z-index: 200;
 }
 
 .sendMessageForm form {
@@ -108,6 +110,8 @@
   font-size: 1.2em;
   background: var(--white-color);
   color: var(--primary-font-color);
+  -webkit-box-shadow:0px -3px 6px rgba(0,0,0,0.026), 0px -4px 8px rgba(0,0,0,0.043);
+  -moz-box-shadow:0px -3px 6px rgba(0,0,0,0.026), 0px -4px 8px rgba(0,0,0,0.043);
   box-shadow: 0px -3px 6px rgba(0,0,0,0.026), 0px -4px 8px rgba(0,0,0,0.043);
 }
 .sendMessageForm input::placeholder{
@@ -119,7 +123,7 @@
 
 .roomList {
   grid-area: r;
-  background-color: var(--main-color);
+  background: linear-gradient(90deg, var(--main-color) 56%, rgba(115,115,251,1) 100%);
   height: 100%;
   z-index: 200;
   box-shadow: 3px 0px 6px rgba(0,0,0,0.026), 4px 0px 8px rgba(0,0,0,0.043);
@@ -208,7 +212,7 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0,0,0,0.3);
-  z-index: 100;
+  z-index: 180;
 }
 
 .mobileRoomList .room-title {
